Fixed the button overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -76,20 +76,22 @@ body {
   box-sizing: border-box;
 }
 
-/* Button Styles */
+/* Button styles */
 .btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 1001; /* Ensure it's above other elements */
-  width: 40px;
-  height: 40px;
+  margin-top: -2%;
+  margin-right: -5.25%;
+  width: 45px;
+  height: 45px;
   border: none;
   cursor: pointer;
-  overflow: hidden;
+  background-color: black;
+  background-image: url('/images/4444/moon.gif');
   background-repeat: no-repeat;
   background-size: contain;
+  z-index: 100;
 }
+
+
 
 /* Twitch Styles */
 #twitch-container {
